--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
 									 <a data-toggle="dropdown" class="dropdown-toggle" href="#">业务体系<strong class="caret"></strong></a>
 									<ul class="dropdown-menu">
 										<li>
-											<a href="#">竞争力指数</a>
+											<a href="#">产品1</a>
 										</li>
 										<li>
-											<a href="#">景气指数</a>
+											<a href="#">产品2</a>
 										</li>
 										<li>
-											<a href="#">资本市场指数</a>
+											<a href="#">产品3</a>
 										</li>
 
 									</ul>
@@ -172,7 +172,7 @@
 						公司简介
 					</h2>
 					<p>
-						新华指数有限公司是新华社下属的全球领先的专业指数服务机构，依托新华社国内外信息采集渠道，以公正、公平、公信为立足点，致力于建立系统的、有竞争力的国际化指数产品体系，开展有益于经济社会可持续发展的指数研发。
+						北京数博思达信息科技有限公司（SupStat）是一家提供数据分析咨询、数据挖掘解决方案、高度定制化数据分析工具的公司（http://supstat.com），同时也为客户提供高水准的统计工具、特别是R语言的培训课程。我们长期在北京、上海、广州等地举办公开培训。此外，我们还为客户提供按需定制的内部培训课程。
 					</p>
 					<p>
 						<a class="btn" href="#">查看更多 »</a>
@@ -184,9 +184,9 @@
 					</h2>
           <div>
 						<ul>
-              <li><a href="#">2012年国际金融中心发展指数在上海发布</a></li>
-              <li><a href="#">2011年国际金融中心发展指数在上海发布</a></li>
-              <li><a href="#">2010年国际金融中心发展指数在上海发布</a></li>
+              <li><a href="#">新闻1</a></li>
+              <li><a href="#">新闻2</a></li>
+              <li><a href="#">新闻3</a></li>
             </ul>
           </div>
 					<p>
@@ -195,14 +195,14 @@
 				</div>
 				<div class="span4">
 					<h2>
-						旗下指数
+						产品和服务
 					</h2>
           <div>
 						<ul>
-              <li><a href="#">国际金融中心发展指数在上海发布</a></li>
-              <li><a href="#">大连软件服务外包产业发展指数</a></li>
-              <li><a href="#">金牛100股票指数系列</a></li>
-              <li><a href="#">无锡物联网景气指数</a></li>
+              <li><a href="#">产品1</a></li>
+              <li><a href="#">产品2</a></li>
+              <li><a href="#">服务1</a></li>
+              <li><a href="#">服务2</a></li>
             </ul>
            </div>
 					<p>
