--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <div class="container">   
   
    <div class="row">
-   <div class="span12 white-panel">
+   <div class="span12 white-panel box-shadow" id="top">
    <div class="row">
 				<div class="span10 offset1" id="slider-show">
 					<div class="carousel slide" id="myCarousel">
