--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 						</ol>
 						<div class="carousel-inner">
 							<div class="item">
-								<img alt="" src="./assets/img/1.jpg" />
+								<img alt="" src="{{base_url}}/assets/img/1.jpg" />
 								<div class="carousel-caption">
 									<h4>
 										数据分析咨询
@@ -32,7 +32,7 @@ layout: default
 								</div>
 							</div>
 							<div class="item active">
-								<img alt="" src="./assets/img/2.jpg" />
+								<img alt="" src="{{base_url}}/assets/img/2.jpg" />
 								<div class="carousel-caption">
 									<h4>
 										数据挖掘解决方案
@@ -48,7 +48,7 @@ layout: default
 								</div>
 							</div>
 							<div class="item">
-								<img alt="" src="./assets/img/3.jpg" />
+								<img alt="" src="{% if site.base_url%}{{site.base_url}}{% endif %}/assets/img/3.jpg" />
 								<div class="carousel-caption">
 									<h4>
 										定制数据分析工具
