--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
 								</div>
 							</div>
 							<div class="item">
-								<img alt="" src="{% if site.base_url%}{{site.base_url}}{% endif %}/assets/img/3.jpg" />
+								<img alt="" src="{{site.base_url}}/assets/img/3.jpg" />
 								<div class="carousel-caption">
 									<h4>
 										定制数据分析工具
@@ -123,13 +123,13 @@ layout: default
         </div>
                <div class="row">
         <div class="span4">
-        <p class="text-center"><a class="btn" href="{% if site.base_url%}{{site.base_url}}{% endif %}/news">查看更多 »</a></p>
+        <p class="text-center"><a class="btn" href="{{site.base_url}}/news">查看更多 »</a></p>
         </div>
         <div class="span4">
-        <p class="text-center"><a class="btn" href="{% if site.base_url%}{{site.base_url}}{% endif %}/resourse">查看更多 »</a></p>
+        <p class="text-center"><a class="btn" href="{{site.base_url}}/resourse">查看更多 »</a></p>
         </div>
         <div class="span4">
-        <p class="text-center"><a class="btn" href="{% if site.base_url%}{{site.base_url}}{% endif %}/blog">查看更多 »</a></p>
+        <p class="text-center"><a class="btn" href="{{site.base_url}}/blog">查看更多 »</a></p>
         </div>
        </div>
        </div>
