--- a/resourse/index.html
+++ b/resourse/index.html
@@ -2,24 +2,20 @@
 layout: default
 ---
 
-<div class="row" id="main">
-   <div class="span12 white-panel radius6 box-shadow">
-    <div class="row">
+<div class="row-fluid" id="main">
+
 		   <div id="content" class="span9">
-          <div class="article">
+          <div class="article-content-wrapper">
            <ul>
              {% for bpost in site.categories.blog limit:5 %}
               <li><a href="{{ bpost.url}}" title="{{bpost.title}}" target="_blank">{{bpost.title}}</a></li>
              {% endfor %}
             </ul>	
-          </div>
-
-          
+          </div>          
        </div>
        
        <div id="sidebar" class="span3">
         sidebar
        </div>
-    </div>  
-    </div>  
+
 </div>
